[package]
name = "pav_regression"
description = "The pair adjacent violators algorithm for isotonic regression"
homepage = "https://github.com/sanity/pav.rs"
repository = "https://github.com/sanity/pav.rs"
version = "0.4.0"
authors = ["Ian Clarke <ian@locut.us>"]
edition = "2018"
license = "LGPL-3.0-or-later"
readme="README.md"
keywords = ["machine-learning"]
documentation = "https://docs.rs/pav_regression/"

[lib]
name = "pav_regression"
path = "src/lib.rs"

[dependencies]
ordered-float = "3.6.0"
serde = { version = "1.0.159", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
